# ssh-key-picker

./: .gitignore  Cargo.toml  README.md  depends.sh  depends.txt  install.sh  ssh-key-picker.lua
src/: main.rs
src/key/: key_type.rs  mod.rs  tracked_key.rs  tracked_keys.rs
